# crypto

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  test.py
.github/workflows/: CI.yml  chacha.yml  curve25519.yml
benches/: bench.rs
chacha/: Cargo.toml  pyproject.toml
chacha/src/: backend.rs  backends.rs  chacha20.rs  cipher.rs  lib.rs  poly1305.rs  utils.rs
chacha/src/backends/: avx2.rs  avx512.rs  fallback.rs  sse2.rs
chacha/tests/: chacha20.rs  poly1305.rs
curve25519/: Cargo.toml  pyproject.toml
curve25519/src/: ed25519.rs  field.rs  ge.rs  lib.rs  precomp.rs  x25519.rs
curve25519/tests/: ed25519.rs  x25519.rs
examples/: dudect.rs
src/: aeads.rs  chacha.rs  ciphers.rs  dh.rs  ecc.rs  errors.rs  lib.rs  poly1305.rs  util.rs  utils.rs  x25519.rs
src/aeads/: aegis256.rs  chachapoly1305.rs  xchachapoly1305.rs
src/aeads/aegis256/: backends.rs
src/aeads/aegis256/backends/: aesni.rs  armcrypto.rs
src/chacha/: backend.rs  chacha.rs  mod.rs
src/ciphers/: chacha.rs
src/ciphers/backends/: avx2.rs  fallback.rs  sse2.rs
src/ciphers/chacha/: backends.rs  detect.rs
src/ciphers/chacha/backends/: avx2.rs  fallback.rs  sse2.rs
src/ecc/: ed25519.rs  field.rs  ge.rs  precomp.rs  x25519.rs
src/macs/: poly1305.rs
tests/: aegis256.rs  chacha.rs  chacha20.rs  ed25519.rs  high-level.rs  poly1305.rs  test.py  x25519.rs
