[package]
name = "raycrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "raycrypt"

[dependencies]
zeroize = { version = "1.7", features = [ "zeroize_derive" ] }
cfg-if = "1.0"
sha2 = "0.10"
getrandom = "0.2"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
benchmark-simple = "0.1"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
opt-level = 2

[profile.dev]
codegen-units = 16
opt-level = 1
