[package]
name = "raycrypt"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Encrypt at the speed of light"
homepage = "https://github.com/somehybrid/raycrypt"
repository = "https://github.com/somehybrid/raycrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "raycrypt"

[dependencies]
zeroize = { version = "1.7", features = [ "zeroize_derive" ] }
cfg-if = "1.0"
getrandom = "0.2"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
benchmark-simple = "0.1"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
opt-level = 2

[profile.dev]
codegen-units = 16
opt-level = 1
