[package]
name = "chacha20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chacha20"
crate-type = ["cdylib", "rlib"]

[target]
rustflags = { target-cpu = "native" }

[dependencies]
cfg-if = "1.0.0"
pyo3 = "0.19"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
