[package]
name = "c25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "c25519"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.19"
zeroize = "1.6"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
